--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "dependencies": {
     "angular": "*",
-    "jquery": "*",
-    "bootstrap": "*",
+    "angular-route": "^1.3.14",
     "body-parser": "~1.0.0",
+    "bootstrap": "*",
     "bower": "^1.3.12",
     "chai": "*",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express3-handlebars ": "*",
+    "jquery": "*",
     "mocha": "*",
     "morgan": "~1.0.0",
     "serve-favicon": "*",
