--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "angular-route": "^1.3.14",
     "body-parser": "~1.0.0",
     "bootstrap": "*",
-    "bower": "^1.3.12",
     "chai": "*",
     "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
     "express": "~4.2.0",
-    "express3-handlebars ": "*",
+    "express-handlebars": "*",
     "jquery": "*",
     "mocha": "*",
     "morgan": "~1.0.0",
@@ -24,6 +22,8 @@
     "supervisor": "*"
   },
   "devDependencies": {
+    "debug": "~0.7.4",
+    "bower": "^1.3.12",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
     "gulp-clean": "^0.3.1",
